--- a/src/Vista/frmUsuarios.form
+++ b/src/Vista/frmUsuarios.form
@@ -387,7 +387,7 @@
                   <Component id="btnActualizar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnReset" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="15" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -425,9 +425,9 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Iconos/restaurar_contrase&#xf1;a.png"/>
+              <Image iconType="3" name="/Iconos/icon-restablecer.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Restablecer Contrase&#xf1;a"/>
+            <Property name="text" type="java.lang.String" value="Restablecer Password"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnResetActionPerformed"/>
