--- a/src/Vista/frmEnvioPDF.form
+++ b/src/Vista/frmEnvioPDF.form
@@ -63,7 +63,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Enviar Boleto"/>
+    <Property name="title" type="java.lang.String" value="Enviar Boleto / Reporte"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
