--- a/src/Vista/frmVentaPorSucursal.form
+++ b/src/Vista/frmVentaPorSucursal.form
@@ -82,6 +82,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Ventas Totales"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
